--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js",
+    "start": "node dist/index.js",
     "build": "tsc",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -20,15 +21,27 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.0",
     "@types/morgan": "^1.9.3",
     "@types/node-fetch": "^2.6.2",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "jest": "^29.2.1",
     "nodemon": "^2.0.20",
     "supertest": "^6.3.0",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "<rootDir>/dist/"
+    ]
   }
 }
